Accidentally put the doctype as haml

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-!!!
+<!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="REFRESH" content="0;url=/dist">
+    <meta http-equiv="REFRESH" content="0;url=/canvas-experiments/dist">
   </head>
   <body>
-    <a href="/dist">Please click here if you have not been redirected.</a>
+    <a href="/canvas-experiments/dist">Please click here if you have not been redirected.</a>
   </body>
 </html>
