--- a/app/index.html
+++ b/app/index.html
@@ -14,34 +14,38 @@
         <script src="scripts/vendor/modernizr.min.js"></script>
     </head>
     <body>
-            <div class="container-fluid">
-                <div class="row-fluid">
-                    <div class="span12">
-                        <div class="page-header">
-                          <h1>Canvas Eperiments</h1>
-                        </div>
+        <a href="https://github.com/nhoffmann/canvas-experiments"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="page-header">
+                      <h1>Canvas Eperiments
+                        <small>by <a href="https://zentralmaschine.net">zentralmaschine</a></small>
+                      </h1>
                     </div>
                 </div>
-                <div class="row-fluid">
-                    <ul class="thumbnails">
-                        <li class="span4">
-                          <a href="pie.html">
-                            <div class="thumbnail">
-                              <h2>Pie</h2>
-                            </div>
-                          </a>
-                        </li>
-                        <li class="span4">
-                          <a href="ball.html">
-                            <div class="thumbnail">
-                              <h2>Balls</h2>
-                              
-                            </div>
-                          </a>
-                        </li>
-                    </ul>
-                </div>
             </div>
+            <div class="row-fluid">
+                <ul class="thumbnails">
+                    <li class="span4">
+                      <a href="pie.html">
+                        <div class="thumbnail">
+                          <h2>Pie</h2>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="span4">
+                      <a href="ball.html">
+                        <div class="thumbnail">
+                          <h2>Balls</h2>
+                          
+                        </div>
+                      </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
