Animation now works in Safari and FF

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
             <div class="row-fluid">
                 <div class="span12">
                     <div class="page-header">
-                      <h1>Canvas Eperiments
+                      <h1>Canvas Experiments
                         <small>by <a href="https://zentralmaschine.net">zentralmaschine</a></small>
                       </h1>
                     </div>
