--- a/app/pie.html
+++ b/app/pie.html
@@ -60,6 +60,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
         
+        <script type="text/javascript" src="scripts/vendor/requestanimationframe_polyfill.js"></script>
+
         <script type="text/javascript" src="scripts/html_colors.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
         <script type="text/javascript" src="scripts/pie/main.js"></script>
