--- a/app/pie.html
+++ b/app/pie.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Canvas Experiment</title>
+        <title>Canvas Experiment – Pie</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -19,38 +19,32 @@
             <div class="container-fluid controls">
                 <div class="row-fluid">
                     <div class="span1">
-                        <h1>Pie</h1>
+                        <label for="speed">Speed</label>
                     </div>
                     <div class="span11">
-                        <div class="row-fluid">
-                            <div class="span1">
-                                <label for="speed">Speed</label>
-                            </div>
-                            <div class="span11">
-                                <input id="speed" type="range" min="-500" max="500" step="1" value="0">
-                            </div>
-                        </div>
-                        <div class="row-fluid">
-                            <div class="span1">
-                                <label for="pieceCount">Pieces</label>
-                            </div>
-                            <div class="span11">
-                                <input id="pieceCount" type="range" min="1" max="147" step="1" value="3">
-                            </div>
-                        </div>
-                        <div class="row-fluid">
-                            <div class="span2">
-                                <button id="start" class="btn btn-small">Start</button>
-                                <button id="stop" class="btn btn-small">Stop</button>
-                            </div>
-                            <div class="span2">
-                                <button id="randomizeColors" class="btn btn-small">Randomize colors</button>
-                            </div>
-                        </div>
+                        <input id="speed" type="range" min="-500" max="500" step="1" value="0">
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span1">
+                        <label for="pieceCount">Pieces</label>
+                    </div>
+                    <div class="span11">
+                        <input id="pieceCount" type="range" min="1" max="147" step="1" value="3">
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span1">
+                        <a href="../">back</a>
+                    </div>
+                    <div class="span1">
+                        <button id="toggle" class="btn btn-small">Start/Stop</button>
+                    </div>
+                    <div class="span4">
+                        <button id="randomizeColors" class="btn btn-small">Randomize Colors</button>
                     </div>
                 </div>
             </div>
-            <a href="https://github.com/nhoffmann/canvas-experiments"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
         </div>
 
         <!--[if lt IE 7]>
@@ -67,9 +61,8 @@
         <script type="text/javascript" src="scripts/pie/main.js"></script>
         <script type="text/javascript" src="scripts/pie/pie.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+            var _gaq=[['_setAccount','UA-25619428-2'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
