--- a/app/animated-balls.html
+++ b/app/animated-balls.html
@@ -6,12 +6,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Canvas Experiment</title>
+        <title>Canvas Experiment – Animated Ball</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="styles/48370073.main.css">
-        <script src="scripts/vendor/cf69c6f2.modernizr.min.js"></script>
+        <link rel="stylesheet" href="styles/main.css">
+        <script src="scripts/vendor/modernizr.min.js"></script>
     </head>
     <body>
         <canvas id="canvas"></canvas>
@@ -19,24 +19,29 @@
             <div class="container-fluid controls">
                 <div class="row-fluid">
                     <div class="span1">
-                        <label for="scaleFactor">Scale</label>
+                        <label for="speed">Speed</label>
                     </div>
                     <div class="span11">
-                        <input id="scaleFactor" type="range" min="0" max="2" step="0.001" value="1">
+                        <input id="speed" type="range" min="1" max="1000" step="1" value="1">
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span1">
                         <a href="../">back</a>
                     </div>
-                    <div class="span2">
+                    <div class="span4">
                         <button id="clear" class="btn btn-small">Clear</button>
+                        <button id="toggle" class="btn btn-small">Start/Stop</button>
+                        <button id="toggleDirection" class="btn btn-small">Reverse On/Off</button>
+                        <button id="add" class="btn btn-small">Add Ball</button>
+                    </div>
+                    <div class="span4">
+                        <button id="horizontal" class="btn btn-small">Horizontal</button>
+                        <button id="vertical" class="btn btn-small">Vertical</button>
+                        <button id="diagonal" class="btn btn-small">Diagonal</button>
+                    </div>
+                    <div class="span3">
                         <button id="toggleShadow" class="btn btn-small">Toggle Shadow</button>
-                    </div>
-                    <div class="span2">
-                        <button id="addBall" class="btn btn-small">Add Random Ball</button>
-                    </div>
-                    <div class="span2">
                     </div>
                 </div>
             </div>
@@ -47,11 +52,11 @@
         <![endif]-->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="scripts/vendor/8bc61845.jquery.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
         
-        <script type="text/javascript" src="scripts/cf58baa8.main.js"></script>
-        <script type="text/javascript" src="scripts/ball/ae98c473.main.js"></script>
-        <script type="text/javascript" src="scripts/ball/d121ef0b.ball.js"></script>
+        <script type="text/javascript" src="scripts/main.js"></script>
+        <script type="text/javascript" src="scripts/animated_balls/main.js"></script>
+        <script type="text/javascript" src="scripts/ball/ball.js"></script>
 
         <script>
             var _gaq=[['_setAccount','UA-25619428-2'],['_trackPageview']];
