--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,13 @@
                       <a href="ball.html">
                         <div class="thumbnail">
                           <h2>Balls</h2>
-                          
+                        </div>
+                      </a>
+                    </li>
+                    <li class="span4">
+                      <a href="animated-balls.html">
+                        <div class="thumbnail">
+                          <h2>Animated Balls</h2>
                         </div>
                       </a>
                     </li>
