--- a/app/pie.html
+++ b/app/pie.html
@@ -42,6 +42,9 @@
                     </div>
                     <div class="span4">
                         <button id="randomizeColors" class="btn btn-small">Randomize Colors</button>
+                        <button id="partyMode" class="btn btn-small">
+                            Party Mode
+                        </button>
                     </div>
                 </div>
             </div>
@@ -53,7 +56,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
-        
+
         <script type="text/javascript" src="scripts/vendor/requestanimationframe_polyfill.js"></script>
 
         <script type="text/javascript" src="scripts/html_colors.js"></script>
